<resources>
    <string name="app_name">SPR Checkin</string>
    <string name="button">Button</string>
    <string name="placeholder_1">Placeholder 1</string>
    <string name="placeholder_2">Placeholder 2</string>
    <string name="refresh">REFRESH</string>
    <string name="check_in_check_out">Check In / Check Out</string>
    <string name="applogo">AppLogo</string>
    <string name="in_out">In / Out</string>
    <string name="get_database_error">Error accessing server: %1$s.</string>
    <string name="no_tag_on_database">We do not find you in our servers.</string>
    <string name="hello_employee">Hello %1$s.</string>
    <string name="direction_employee">%1$s %2$s at %3$s.</string>
    <string name="logout">logout</string>
    <string name="login">login</string>
    <string name="card_request">Please put your card behind the phone.</string>
    <string name="no_nfc_support">No NFC support. Please reset your phone or bring it for repair.</string>
    <string name="nfc_disable_alert">NFC feature has been disabled. Please enable it in Settings.</string>
    <string name="card_read_problem_warning">Problem reading card. Please put your card in again.</string>
    <string name="scanning_load">Scanning…</string>
    <string name="alert_not_logout">ALERT: %1$s did not logout!</string>
    <string name="logout_noproblem">Employee check: complete!</string>
    <string name="log">Log</string>
    <string name="error_file_inout">Problem occurs when outputting to file.</string>
    <string name="error_file_create">Problem occurs when creating file to write.</string>
    <string name="reminder_logout">Please do not forget to log out when you leave.</string>
    <string name="logout_report">Automatic Logout Report</string>
    <string name="store_s_password">Store\'s Password</string>
    <string name="go_back">Go Back</string>
    <string name="next">Next</string>
    <string name="write_nfc_tags">Write NFC Tags</string>
    <string name="sbm">Next</string>
    <string name="wrong_password">Wrong password.</string>
    <string name="txt_guide">Input password, then press Next, then input the new tagID and press next again, then insert the card to write the ID to the tag.</string>
    <string name="txt_guide_after">You can go back to the login screen, or press the new tag ID in the input field, press next, then insert the new card to continue writing.</string>
    <string name="placeholder_id">123456</string>
    <string name="txt_guide_card_wrong">You have to type the password or the tagID and press Next before inserting the card!</string>
    <string name="txt_guide_insert_card">Please insert card.</string>
    <string name="txt_guide_input_id">Input the tagID you want to write.</string>
    <string name="manager_pass">Manger\'s password</string>
    <string name="no_blank">Do not leave this field blank</string>
    <string name="txt_guide_popup_replace">Old ID: %1$s. New ID: %2$s.</string>
    <string name="txt_guide_popup_newid">New NFC tag: %1$s.</string>


</resources>