<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack"

        android:layout_width="322dp"
        android:layout_height="63dp"
        android:layout_margin="3dp"

        android:radius="20dp"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:backgroundTint="#a7173b"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913"
        tools:text="@string/go_back" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSbm"

        android:layout_width="322dp"
        android:layout_height="63dp"
        android:layout_margin="3dp"

        android:radius="20dp"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:backgroundTint="#a7173b"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.799"
        tools:text="@string/next" />

    <TextView
        android:id="@+id/txtInputGuide"
        android:layout_width="299dp"
        android:layout_height="235dp"
        android:text="@string/store_s_password"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.298" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="331dp"
        android:layout_height="71dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/applogo"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@drawable/logo"
        tools:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:shadowColor="#000000"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#9A8D8D"
        android:textColorLink="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.625" />

</androidx.constraintlayout.widget.ConstraintLayout>